fix: Break the name properly

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 .name span {
   font-size: 4em;
   line-height: .75em;
+  display: block;
 }
 
 .info {
